--- a/src/components/PokemonList.css
+++ b/src/components/PokemonList.css
@@ -9,8 +9,7 @@ h1 {
     justify-content: center;
     width: 100%;
     max-width: 1000px;
-  }
-  
+}
 
 .pokemonList{
     display: grid;
@@ -32,10 +31,15 @@ h1 {
     align-self: normal;
 }
 
+.pokemonCard:hover {
+    scale: 1.1;
+}
+
 .typesRow {
     display: flex;
     justify-content: space-evenly;
 }
+
 .typeIcon {
     display: block;
   margin-left: auto;
