--- a/src/components/PokemonDetail.css
+++ b/src/components/PokemonDetail.css
@@ -1,5 +1,9 @@
+h2, h3 {
+    text-align: center;
+}
+
 .statList {
-    gap: 16px;
+    gap: 16px;;
 }
 
 .detailsContent {
@@ -8,7 +12,7 @@
     align-items: center;
 }
 
-img {
+.detailImg {
     object-fit: contain;
 }
 
