pokemon pagination broken

--- a/src/components/PokemonList.css
+++ b/src/components/PokemonList.css
@@ -12,6 +12,7 @@ h1 {
 }
 
 .pokemonList{
+    padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     flex-direction: column;
