refactor code and starting implementation of the comparison of pokemon

--- a/src/components/PokemonList.css
+++ b/src/components/PokemonList.css
@@ -43,7 +43,17 @@ h1 {
 
 .typeIcon {
     display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+}
+
+.pokemonDetailTop {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+}
+
+.pokeballIconCompare {
+    padding: 10px;
 }
